syntax = "proto3";

package transfer_v2;

service FileService {
    rpc SyncFiles(FileRequest) returns (stream FileResponse) {}
}

message FileRequest {
    repeated FileInfo info = 1;
}

message FileInfo {
    string path = 1;
    string hash = 2;
}

message FileResponse {
    string path = 1;
    oneof payload {
        Action action = 2;
        bytes data = 3;
    }
}

enum Action {
    UNKNOWN = 0;
    KEEP = 1; // files are already same, keep it
    DELETE = 2; // extra file in your system, delete it
    COMPLETE = 3; // sending files is complete, you can close the write stream
}